# M5CoreS3-UserBSP

./: .gitignore  partitions.csv  partitions.csv.new_dl  sdkconfig  sdkconfig.old
backup/: launcher.cpp  launcher.hpp  lv_img_logo0.c
components/M5CoreS3-UserBSP/: CMakeLists.txt  M5CoreS3.cpp  M5CoreS3.hpp  idf_component.yml
components/m5stack_core_s3/: .component_hash  idf_component.yml  m5stack_core_s3.c
components/m5stack_core_s3/include/bsp/: m5stack_core_s3.h
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
main/apps/: apps.hpp
main/apps/faceRecognition/: faceRecognition.cpp  faceRecognition.hpp
main/apps/faceRecognize/: faceRecogniz.hpp
main/apps/launcher/: launcher.cpp  launcher.hpp  lv_img_logo.c
